--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
                  </div>
         </div>
     </div>
+    <!-- <h1 id="instruction-text">Press Spacebar to start the  game</h1>
+    <img src="snake-game-logo.png" alt="snake-logo" />
+-->
 </body>
 </html>
