--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                  </div>
         </div>
     </div>
-    <!-- <h1 id="instruction-text">Press Spacebar to start the  game</h1>
-    <img src="snake-game-logo.png" alt="snake-logo" />
--->
+    <h1 id="instruction-text">Press Spacebar to start the  game</h1>
+    <img id="logo" src="snake-game-logo.png" alt="snake-logo" />
 </body>
 </html>
