--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"> defer</script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div>
@@ -24,7 +24,7 @@
                  </div>
         </div>
     </div>
-    <h1 id="instruction-text">Press Spacebar to start the  game</h1>
-    <img id="logo" src="snake-game-logo.png" alt="snake-logo" />
+    <!-- <h1 id="instruction-text">Press Spacebar to start the  game</h1>
+    <img id="logo" src="snake-game-logo.png" alt="snake-logo" /> -->
 </body>
 </html>
